Рефакторинг навигации: переход на NavigationPath и роуты

--- a/Yes No Game.xcodeproj/xcshareddata/xcschemes/Yes No Game.xcscheme
+++ b/Yes No Game.xcodeproj/xcshareddata/xcschemes/Yes No Game.xcscheme
@@ -50,6 +50,13 @@
             ReferencedContainer = "container:Yes No Game.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <AdditionalOptions>
+         <AdditionalOption
+            key = "MallocScribble"
+            value = ""
+            isEnabled = "YES">
+         </AdditionalOption>
+      </AdditionalOptions>
       <StoreKitConfigurationFileReference
          identifier = "../../Yes No Game/Resources/Danetka.storekit">
       </StoreKitConfigurationFileReference>
